feat: add transaction create endpoint
